# darkseed

./: .gitignore  CHANGELOG.md  README.md  flake.nix  module.nix  pyproject.toml
research/encoding/: encoding.ipynb
src/darkseed/: address.py  cli.py  codec.py  config.py  daemon.py  dns.py  node.py  node_loader.py  node_manager.py  nodes.py
src/darkseed/address/: __init__.py  address.py  bip155like.py  network.py
src/darkseed/cli/darkdig/: __init__.py  cli.py  config.py  darkdig.py
src/darkseed/cli/darkseed/: __init__.py  config.py  darkseed.py
src/darkseed/dns/: __init__.py  aaaa_codec.py  aaaa_record.py  custom_encoder.py  null_record.py  record_builder.py  regular_records.py  server.py
src/darkseed/node/: __init__.py  address_codecs.py  node.py  services.py
src/darkseed/rest/: __init__.py  server.py
