[tool.poetry]
name = "darkseed"
version = "0.11.0"
description = "Bitcoin DNS seeder with support for all network types"
authors = ["virtu <virtu@cryptic.to>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
dnspython = "^2.6.1"
pysocks = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
darkseed = "darkseed.cli.darkseed:main"
darkdig = "darkseed.cli.darkdig:main"
